[tool.poetry]
name = "prob-gbt"
version = "0.1.0"
description = ""
authors = ["Ilya Fastovets <ilya.fastovets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.10.16"
catboost = "^1.2.3"
pandas = "^2.2.2"
numpy = "1.22.4"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
pygam = ">=0.8,<=0.9.1"
optuna = "^4.2.1"
properscoring = "^0.1"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
run-example = "prob_gbt.example:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 